--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 <body>
    <div class="card-container">
        <h1>Rate Cat Pics!</h1>
-       <h2 class="warning">Warning: The photos work, but they take a while to load.</h2>
+       <h2 class="warning">Warning: The photos work, but they take a while to load. SO DON'T SPAM!</h2>
 
        <!-- Cat image -->
        <img id="petimage" src="{{ url }}" alt="Random Pet" data-image-id="">
