--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
        $(document).ready(function() {
            setTimeout(function() {
                $('.warning').fadeOut(1500);
-           }, 4000);
+           }, 4000); // Fades out warning message
 
            let userHasRated = false;  // Prevent rating spam
 
