--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,20 @@ h2 {
     margin-bottom: 30px;
 }
 
+h3{
+    font-family: 'itim';
+    font-size: 15px;
+    padding-top: 0;
+    margin-top: 0;
+}
+
+
+.warning {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
 .fa-star {
     font-size: 30px;
     color: #ccc;
